--- a/TP4/client/src/app/components/movies-grid/movies-grid.component.scss
+++ b/TP4/client/src/app/components/movies-grid/movies-grid.component.scss
@@ -30,7 +30,7 @@ mat-icon {
     background-color: lightgrey;
 }
 
-#bd-button {
+#importer-films {
   position: absolute;
   top: 70px;
   left: 10%;
