--- a/TP4/client/src/app/components/toolbar/toolbar.component.html
+++ b/TP4/client/src/app/components/toolbar/toolbar.component.html
@@ -3,19 +3,21 @@
         <div>
             <span class='left-item' mat-button [matMenuTriggerFor]="aboveMenu">Films</span>
             <mat-menu #aboveMenu="matMenu" yPosition="below">
-                <button mat-menu-item (click)="this.addMovie()">Ajouter un film</button>
+                <button mat-menu-item>Voir les films</button>
+                <button *ngIf="activeMember === null" mat-menu-item (click)="this.addMovie()">Ajouter un film</button>
             </mat-menu>
             <span class='left-item' mat-button [matMenuTriggerFor]="belowMenu">Participants</span>
             <mat-menu #belowMenu="matMenu" yPosition="below">
-                <button mat-menu-item>Ajouter un participant</button>
+                <button mat-menu-item>Voir les participants</button>
+                <button *ngIf="activeMember === null" mat-menu-item (click)="this.addParticipant()">Ajouter un participant</button>
             </mat-menu>
         </div>
         <span id='fill-space'></span>
         <div>
-            <span class='right-item' mat-button [matMenuTriggerFor]="beforeMenu">Charles-Éric Langlois</span>
+            <span class='right-item' mat-button [matMenuTriggerFor]="beforeMenu">{{activeMember?.nom}}</span>
             <mat-menu #beforeMenu="matMenu" yPosition="below">
-                <button mat-menu-item>Se déconnecter</button>
-                <button mat-menu-item>Modifier profil</button>
+                <button *ngIf="activeMember !== null" mat-menu-item>Modifier profil</button>
+                <button mat-menu-item (click)="this.logOut()">Se déconnecter</button>
             </mat-menu>
         </div>
     </mat-toolbar-row>
