--- a/TP4/client/src/app/components/modals/add-participant-modal/add-participant-modal.component.html
+++ b/TP4/client/src/app/components/modals/add-participant-modal/add-participant-modal.component.html
@@ -1,5 +1,3 @@
-<p>add-participant-modal works!</p>
-
 <div id="main">
     <h1 mat-dialog-title id="title">Ajouter un participant</h1>
     <div mat-dialog-content>
@@ -29,7 +27,11 @@
             <mat-grid-tile><span class="tile-title">Sexe</span></mat-grid-tile>
             <mat-grid-tile class="tile-content">
                 <mat-form-field>
-                    <input matInput value="newSex" [(ngModel)]="newSex"/>
+                    <mat-select [(ngModel)]="newSex">
+                        <mat-option *ngFor="let sex of sexes" [value]="sex">
+                          {{sex}}
+                        </mat-option>
+                      </mat-select>
                 </mat-form-field>
             </mat-grid-tile>
             <mat-grid-tile><span class="tile-title">Âge</span></mat-grid-tile>
