--- a/TP4/client/src/app/components/homepage/homepage.component.html
+++ b/TP4/client/src/app/components/homepage/homepage.component.html
@@ -23,7 +23,7 @@
             <button mat-button (click)="this.logInMember()">Se connecter</button>
         </div>
     </div> -->
-    <div id='form-admin'>
+    <div id='login-form'>
         <h1 mat-dialog-title id="title">Se connecter</h1>
         <div mat-dialog-content>
             <mat-grid-list cols = "1" rowHeight="30px" class="content">
@@ -39,9 +39,9 @@
                 </mat-grid-tile>
             </mat-grid-list>
         </div>
-        <div id="signUp">
+        <!-- <div id="signUp">
           <button mat-raised-button (click)="this.signUp()">S'inscrire</button>
-      </div>
+      </div> -->
         <div id="confirm">
             <button mat-raised-button (click)="this.logIn()">Se connecter</button>
         </div>
