--- a/TP4/client/src/app/components/modals/view-movie-modal/view-movie-modal.component.html
+++ b/TP4/client/src/app/components/modals/view-movie-modal/view-movie-modal.component.html
@@ -6,10 +6,11 @@
             <mat-grid-tile><span class="tile-content">{{this.data.genre}}</span></mat-grid-tile>
             <mat-grid-tile><span class="tile-content">Durée (min)</span></mat-grid-tile>
             <mat-grid-tile><span class="tile-content">{{this.data.duration}}</span></mat-grid-tile>
-            <mat-grid-tile><span class="tile-content">Réalisateur</span></mat-grid-tile>
-            <mat-grid-tile><span class="tile-content">{{this.data.director}}</span></mat-grid-tile>
+            <!-- <mat-grid-tile><span class="tile-content">Réalisateur</span></mat-grid-tile>
+            <mat-grid-tile><span class="tile-content">{{this.data.director}}</span></mat-grid-tile> -->
             <mat-grid-tile><span class="tile-content">Année de production</span></mat-grid-tile>
             <mat-grid-tile><span class="tile-content">{{this.data.prodYear}}</span></mat-grid-tile>
+            <!-- TO DO AJOUTER LES OSCARS LES LES EMPLOYÉS DU FILM -->
         </mat-grid-list>
     </div>
     <div id="confirm">
