--- a/TP4/client/src/app/components/modals/view-movie-modal/view-movie-modal.component.scss
+++ b/TP4/client/src/app/components/modals/view-movie-modal/view-movie-modal.component.scss
@@ -12,13 +12,32 @@ mat-dialog-container {
     text-align: center;
 }
 
+.whitespace {
+    margin-bottom: 20px;
+}
+
 .tile-content {
     position: absolute;
     left: 15px;
     bottom: 0px;
 }
 
-#confirm {
+#watch {
     float: right;
     margin-top: 10px;
+}
+
+#close {
+    float: left;
+    margin-top: 10px;
+}
+
+.mat-dialog-title {
+    margin: 0;
+}
+
+#role-list {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 20px;
 }
