--- a/TP4/client/src/app/components/members-grid/members-grid.component.html
+++ b/TP4/client/src/app/components/members-grid/members-grid.component.html
@@ -3,34 +3,57 @@
     <button mat-raised-button id="importer-membres" (click)="this.getMembres()" class='left-item' mat-button >Importer les membres</button>
   </div>
   <div id='grid'>
-        <mat-grid-list cols = "25" rowHeight = "30px">
-            <mat-grid-tile [colspan] = "5" [rowspan] = "1" class='tile' *ngFor="let colonne of colonnes">
+              <mat-grid-list cols = "22" rowHeight = "30px">
+                <mat-grid-tile [colspan] = "3" [rowspan] = "1" class='tile'>
+                    <div class='tile-content'>
+                        ID
+                    </div>
+                </mat-grid-tile>
+                <mat-grid-tile [colspan] = "4" [rowspan] = "1" class='tile'>
+                  <div class='tile-content'>
+                      Nom
+                  </div>
+              </mat-grid-tile>
+              <mat-grid-tile [colspan] = "7" [rowspan] = "1" class='tile'>
+                  <div class='tile-content'>
+                      Courriel
+                  </div>
+              </mat-grid-tile>
+              <mat-grid-tile [colspan] = "4" [rowspan] = "1" class='tile'>
+                  <div class='tile-content'>
+                      Ville
+                  </div>
+              </mat-grid-tile>
+              <mat-grid-tile [colspan] = "3" [rowspan] = "1" class='tile'>
                 <div class='tile-content'>
-                    {{ colonne }}
+                    Administrateur
                 </div>
             </mat-grid-tile>
+            <mat-grid-tile [colspan] = "1" [rowspan] = "1" class='tile'>
+              <div class='tile-content'></div>
+           </mat-grid-tile>
             <div *ngFor="let membre of membres">
-                <mat-grid-tile [colspan] = "5" [rowspan] = "1" class='tile'>
+                <mat-grid-tile [colspan] = "3" [rowspan] = "1" class='tile'>
                     <div class='tile-content'>
                         {{membre.ID_membre}}
                     </div>
                 </mat-grid-tile>
-                <mat-grid-tile [colspan] = "5" [rowspan] = "1" class='tile'>
+                <mat-grid-tile [colspan] = "4" [rowspan] = "1" class='tile'>
                     <div class='tile-content'>
                         {{ membre.nom }}
                     </div>
                 </mat-grid-tile>
-                <mat-grid-tile [colspan] = "5" [rowspan] = "1" class='tile'>
+                <mat-grid-tile [colspan] = "7" [rowspan] = "1" class='tile'>
                     <div class='tile-content'>
                         {{ membre.courriel }}
                     </div>
                 </mat-grid-tile>
-                <mat-grid-tile [colspan] = "5" [rowspan] = "1" class='tile'>
+                <mat-grid-tile [colspan] = "4" [rowspan] = "1" class='tile'>
                     <div class='tile-content'>
                         {{membre.ville}}
                     </div>
                 </mat-grid-tile>
-                <mat-grid-tile [colspan] = "5" [rowspan] = "1" class='tile'>
+                <mat-grid-tile [colspan] = "3" [rowspan] = "1" class='tile'>
                     <div class='tile-content'>
                         {{membre.isAdmin}}
                     </div>
