--- a/TP4/client/src/app/components/members-grid/members-grid.component.html
+++ b/TP4/client/src/app/components/members-grid/members-grid.component.html
@@ -62,7 +62,7 @@
                   <mat-icon [matMenuTriggerFor]="belowMenu">settings</mat-icon>
               </mat-grid-tile>
               <mat-menu #belowMenu="matMenu" yPosition="below">
-                  <button mat-menu-item (click="this.show(membre)")>Voir le membre</button>
+                  <button mat-menu-item (click)="this.show(membre)">Voir le membre</button>
               </mat-menu>
             </div>
          </mat-grid-list>
